--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,11 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script src="scripts/composer-char-counter.js"></script>
-
+    <script>
+      $(document).ready(function() {
+        $('#tweets-container').empty();
+      });
+    </script>
 
   
   </head>
