--- a/public/index.html
+++ b/public/index.html
@@ -80,25 +80,26 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
-      </section>
-      <section class="tweets-container">
-        <article class="tweet">
-          <!-- <header>
-          </header> -->
-          <!-- <footer>
-            <div>
+    </section>
+    <section class="tweets-container">
+      <article class="tweet">
+        <header>
+        </header>
+        <footer>
+          <div>
 
-              <i class="fas fa-retweet"></i>
+            <i class="fas fa-retweet"></i>
 
-              <i class="far fa-heart"></i>
+            <i class="far fa-heart"></i>
 
-              <i class="far fa-envelope"></i>
-            </div>
-          </footer> -->
-        </article>
-      </section>
-    <!-- </section> -->
+            <i class="far fa-envelope"></i>
+          </div>
+        </footer>
+      </article>
+    </section>
+    </section>
   </main>
+
 
 </body>
 
